style/style.css
*, *:before, *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

html, body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
}

body {
  padding: 5em 1em;
  background-image: url(bg.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
}

h1 {
  text-align: center;
  font-size: 275%;
  font-weight: 300;
  margin-top: -1em;
  text-shadow: 0 2px 1px white;
}

#box {
  margin: auto;
  width: 50em;
  height: 100%;
  white-space: nowrap;
}
@media all and (max-width: 52em) {
  #box {
    width: 100%;
  }
}

#center {
  vertical-align: middle;
  display: inline-block;
  white-space: normal;
  width: 100%;
}

#box:after {
  content: "";
  width: 1px;
  height: 100%;
  vertical-align: middle;
  display: inline-block;
  margin-right: -10px;
}

table {
  background-color: white;
  padding: 1em;
  width: 100%;
}
table, table * {
  border-color: #27ae60 !important;
}
table th {
  text-transform: uppercase;
  font-weight: 300;
  text-align: center;
  color: white;
  background-color: #27ae60;
  position: relative;
}
table th:after {
  content: "";
  display: block;
  height: 5px;
  right: 0;
  left: 0;
  bottom: 0;
  background-color: #16a085;
  position: absolute;
}

td.center {
  text-align: center;
}
img.platform {
  height: 20px;
}

img.rarity {
  width: 15px;
  height: 15px;
  display: inline;
}
img.flag {
  height: 20px;
  width: 30px;
  border: 1px solid #000;
}

.cover {
  background-size: cover;
}

